# remote-chrome-skill

./: .gitignore  AGENT.md  PI_AGENT_SETUP.md  README.md  SKILL.md  TODO.md  package.json  pyproject.toml
.opencode/skills/remote-chrome-skill/: SKILL.md
references/: api.md  architecture.md  events.md  security.md  spa-patterns.md  troubleshooting.md
scripts/: windows-bootstrap.bat  windows-bootstrap.ps1
src/remote_chrome/: __init__.py  bootstrap.py  cli.py  client.py  events.py
src/remote_chrome_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py
