[project]
name = "remote-chrome-skill"
version = "0.1.0"
description = "Control Windows Chrome DevTools Protocol (CDP) from WSL Ubuntu — via OpenCode skill"
requires-python = ">=3.10"
dependencies = ["websockets>=13"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
remote-chrome = "remote_chrome.cli:main"
