[project]
name = "remote-chrome-skill"
version = "0.1.0"
description = "Control Windows Chrome DevTools Protocol (CDP) from WSL Ubuntu — via OpenCode skill"
requires-python = ">=3.10"
dependencies = ["websockets>=13"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"] }

[dependency-groups]
dev = [
    "mypy>=2.3.0",
]

[project.scripts]
remote-chrome = "remote_chrome.cli:main"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

# The scope of the type-annotation effort is client.py and cli.py.
# Relax the strict generic check for the imported helper modules so they
# need not be touched (they are out of scope).
[[tool.mypy.overrides]]
module = ["remote_chrome.events", "remote_chrome.bootstrap"]
disallow_any_generics = false
